Added additional movie parameters. Fixed UI and Test Cases