@@ -15,9 +15,45 @@ public class HomeControllerTest {
     @Test
     public void show_only_movies_of_the_selected_genre_filter(){
         //GIVEN
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -26,11 +62,11 @@ public class HomeControllerTest {
 
         List<Movie> expectedMovies = new ArrayList<>();
         expectedMovies.add(movie1);
-        expectedMovies.add(movie2);
+        expectedMovies.add(movie3);
 
         //WHEN
         HomeController testController = new HomeController();
-        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"",Genre.SCIENCE_FICTION);
+        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"",Genre.DRAMA);
 
         //THEN
         assertEquals(expectedMovies,filteredMovies);
@@ -39,9 +75,47 @@ public class HomeControllerTest {
     @Test
     public void show_all_movies_if_all_genre_is_selected(){
         //GIVEN
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -60,9 +134,47 @@ public class HomeControllerTest {
     @Test
     public void show_only_movies_with_search_query_matching_titles(){
         //GIVEN
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -70,11 +182,11 @@ public class HomeControllerTest {
         allTestMovies.add(movie3);
 
         List<Movie> expectedMovie = new ArrayList<>();
-        expectedMovie.add(movie2);
+        expectedMovie.add(movie1);
 
         //WHEN
         HomeController testController = new HomeController();
-        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"Chrono Paradox",Genre.ALL);
+        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"Eternal Echoes",Genre.ALL);
 
         //THEN
         assertEquals(expectedMovie,filteredMovies);
@@ -82,9 +194,47 @@ public class HomeControllerTest {
     @Test
     public void show_only_movies_with_search_query_partly_matching_titles(){
         //GIVEN
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -96,7 +246,7 @@ public class HomeControllerTest {
 
         //WHEN
         HomeController testController = new HomeController();
-        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"ers in the Dark",Genre.ALL);
+        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"choes of",Genre.ALL);
 
         //THEN
         assertEquals(expectedMovie,filteredMovies);
@@ -105,9 +255,47 @@ public class HomeControllerTest {
     @Test
     public void show_only_movies_with_search_query_matching_descriptions(){
         //GIVEN
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -119,7 +307,7 @@ public class HomeControllerTest {
 
         //WHEN
         HomeController testController = new HomeController();
-        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"starts receiving mysterious messages ",Genre.ALL);
+        List<Movie> filteredMovies = testController.filterMovies(allTestMovies,"must navigate the brutal",Genre.ALL);
 
         //THEN
         assertEquals(expectedMovie,filteredMovies);
@@ -128,10 +316,48 @@ public class HomeControllerTest {
     @Test
     public void show_all_movies_when_empty_query_is_sent(){
         //GIVEN
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -148,10 +374,48 @@ public class HomeControllerTest {
     @Test
     public void check_if_all_caps_returns_correct_title(){
         //GIVEN
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -162,7 +426,7 @@ public class HomeControllerTest {
         expectedMovies.add(movie2);
 
         //WHEN
-        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "CHRONO PARADOX", Genre.ALL);
+        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "SHADOWED PATHS", Genre.ALL);
 
         //THEN
         assertEquals(resultMovie, expectedMovies);
@@ -172,10 +436,48 @@ public class HomeControllerTest {
     @Test
     public void check_if_all_lower_case_returns_correct_title(){
         //GIVEN
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -186,7 +488,7 @@ public class HomeControllerTest {
         expectedMovies.add(movie2);
 
         //WHEN
-        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "chrono paradox", Genre.ALL);
+        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "shadowed paths", Genre.ALL);
 
         //THEN
         assertEquals(resultMovie, expectedMovies);
@@ -196,10 +498,48 @@ public class HomeControllerTest {
     @Test
     public void extra_spaces_do_not_change_search_result(){
         //GIVEN
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -210,7 +550,7 @@ public class HomeControllerTest {
         expectedMovies.add(movie2);
 
         //WHEN
-        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "  Chrono  Paradox    ", Genre.ALL);
+        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, " Shadowed    Paths    ", Genre.ALL);
 
         //THEN
         assertEquals(resultMovie, expectedMovies);
@@ -223,9 +563,47 @@ public class HomeControllerTest {
     public void show_movies_matching_title_and_description_only_once(){
         //GIVEN
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -233,10 +611,10 @@ public class HomeControllerTest {
         allTestMovies.add(movie3);
 
         List<Movie> expectedMovies = new ArrayList<>();
-        expectedMovies.add(movie2);
+        expectedMovies.add(movie3);
 
         //WHEN
-        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "Chrono Paradox", Genre.ALL);
+        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "War", Genre.ALL);
 
         //THEN
         assertEquals(resultMovie, expectedMovies);
@@ -247,9 +625,47 @@ public class HomeControllerTest {
     public void sort_movies_ascending_by_title(){
         //GIVEN
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> sortedMovies = new ArrayList<>();
         sortedMovies.add(movie1);
@@ -257,9 +673,9 @@ public class HomeControllerTest {
         sortedMovies.add(movie3);
 
         List<Movie> expectedMovies = new ArrayList<>();
-        expectedMovies.add(movie2);
-        expectedMovies.add(movie1);
         expectedMovies.add(movie3);
+        expectedMovies.add(movie1);
+        expectedMovies.add(movie2);
 
         //WHEN
         homeController.sortMovies(sortedMovies, true);
@@ -271,9 +687,47 @@ public class HomeControllerTest {
     public void sort_movies_descending_by_title(){
         //GIVEN
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "Chrono Paradox: A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> sortedMovies = new ArrayList<>();
         sortedMovies.add(movie1);
@@ -281,9 +735,9 @@ public class HomeControllerTest {
         sortedMovies.add(movie3);
 
         List<Movie> expectedMovies = new ArrayList<>();
-        expectedMovies.add(movie3);
-        expectedMovies.add(movie1);
         expectedMovies.add(movie2);
+        expectedMovies.add(movie1);
+        expectedMovies.add(movie3);
 
         //WHEN
         homeController.sortMovies(sortedMovies, false);
@@ -297,9 +751,47 @@ public class HomeControllerTest {
     public void throw_illegal_argument_exception_when_genre_is_null(){
         //GIVEN
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -323,9 +815,47 @@ public class HomeControllerTest {
     public void query_finds_movies_but_genre_does_not_fit(){
         //GIVEN
         HomeController homeController = new HomeController();
-        Movie movie1 = new Movie("Ephemeral Echoes", "In a world where memories can be bought and sold, a man discovers a black market dealing in forgotten dreams. As he delves into the surreal landscapes of other people's minds, he uncovers a conspiracy that threatens to erase the very fabric of reality.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        Movie movie2 = new Movie("Chrono Paradox", "A brilliant physicist accidentally creates a time-traveling device, leading to a series of unforeseen consequences. As he attempts to fix the timeline, he becomes entangled in a web of paradoxes that challenge the very nature of cause and effect.", new ArrayList<>(Arrays.asList(Genre.SCIENCE_FICTION, Genre.ADVENTURE)));
-        Movie movie3 = new Movie("Whispers in the Dark", "A reclusive writer starts receiving mysterious messages through an antique typewriter that predict future events. As the predictions become increasingly dire, she must confront the source of the messages and unravel a centuries-old mystery.", new ArrayList<>(Arrays.asList(Genre.MYSTERY, Genre.DRAMA)));
+        Movie movie1 = new Movie(
+                "001",
+                "Eternal Echoes",
+                Arrays.asList(Genre.DRAMA, Genre.ROMANCE, Genre.MYSTERY),
+                2023,
+                "In a small coastal town, a young woman discovers a series of love letters hidden in an antique book, sparking a journey to unravel a decades-old mystery and find the true meaning of love.",
+                "example.com/eternal-echoes",
+                130,
+                List.of("Ava Smith"),
+                Arrays.asList("Ryan Johnson", "Emily Greene"),
+                Arrays.asList("Lily Collins", "Ryan Gosling", "Helen Mirren"),
+                8.2
+        );
+
+        Movie movie2 = new Movie(
+                "002",
+                "Shadowed Paths",
+                Arrays.asList(Genre.THRILLER, Genre.MYSTERY, Genre.CRIME),
+                2024,
+                "A seasoned detective is drawn into a web of intrigue and danger when he investigates a series of seemingly unrelated crimes, only to discover they are all connected by a dark secret buried in the past.",
+                "example.com/shadowed-paths",
+                120,
+                List.of("David Fincher"),
+                Arrays.asList("Sarah Johnson", "Michael Thompson"),
+                Arrays.asList("Jake Gyllenhaal", "Charlize Theron", "Anthony Hopkins"),
+                8.6
+        );
+
+        Movie movie3 = new Movie(
+                "003",
+                "Echoes of War",
+                Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.HISTORY),
+                2022,
+                "Set during World War II, a group of soldiers must navigate the brutal realities of combat while grappling with their own inner demons and the moral complexities of war.",
+                "example.com/echoes-of-war",
+                150,
+                List.of("Christopher Nolan"),
+                Arrays.asList("Matthew Carter", "Emma Thompson"),
+                Arrays.asList("Tom Hanks", "Benedict Cumberbatch", "Alicia Vikander"),
+                8.9
+        );
 
         List<Movie> allTestMovies = new ArrayList<>();
         allTestMovies.add(movie1);
@@ -333,7 +863,7 @@ public class HomeControllerTest {
         allTestMovies.add(movie3);
 
         //WHEN
-        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "Chrono Paradox", Genre.BIOGRAPHY);
+        List<Movie> resultMovie = homeController.filterMovies(allTestMovies, "Shadowed Paths", Genre.BIOGRAPHY);
 
         //THEN
         assertTrue(resultMovie.isEmpty());
